--- a/pom.xml
+++ b/pom.xml
@@ -148,8 +148,14 @@
     		<configuration>
         	<failOnMissingWebXml>false</failOnMissingWebXml>
     		</configuration>
-		</plugin> 	
+		</plugin> 
+		      <plugin>
+        <groupId>org.codehaus.sonar</groupId>
+        <artifactId>sonar-maven-plugin</artifactId>
+        <version>2.5</version>
+      </plugin>
             </plugins>
+	
 	</build>
 	<distributionManagement>
         <repository>
